--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<div class="col-md-7" id="banner-col">
 						<h3>A smart wearable device to track the health of elders
 						</h3>
-						<p>This project mainly considering about deaf people and create a system which help for different type of deaf people. This research is looking for the capability of providing enhanced help for deaf people by providing a system which contains all type of solutions, rather than providing just the system which help for only one type of hard-of-hearing people.
+						<p>This project is focused on Elders where it was created to provide a helping hand for them to manage their day to day medical needs.
 						</p>
 
 						<div class="d-grid gap-2 d-md-flex justify-content-center">
@@ -152,7 +152,7 @@ Artificial Intelligence (AI) chatbots are software programs that can simulate hu
 						</ul>
 					</div>
 					<div class="col-md-6" id="chart-col2">
-						<img src="images/chart.jpg" alt="img-fluid rounded mx-auto d-block">
+						<img src="images/chart.JPEG" alt="img-fluid rounded mx-auto d-block">
 						<!-- <img src="images/hearinlos.png" alt="img-fluid rounded mx-auto d-block"> -->
 					</div>
 				</div>
@@ -196,9 +196,11 @@ Artificial Intelligence (AI) chatbots are software programs that can simulate hu
 			<div class="container-fluid" id="about-container">
 				<div class="row" id="banner-row">
 
-					<div class="col-md-5" id="about-col">
+					<div class="raw-md-5" id="about-col">
 						<h1 class="text-center" style="font-size: 26px;">Research Problem</h1>
+<center>
 						<ul style="font-size: 19px;">
+
 							<li>
 								How elders track their daily health with expensive health trackers and their complicated user interfaces?
 							</li>
@@ -211,10 +213,12 @@ Artificial Intelligence (AI) chatbots are software programs that can simulate hu
 							<li>
 								In emergency from whom they get help to contact emergency units and predict their diseases?
 							</li>
+
 						</ul>
+</center>
 					</div>
 					<div class="col-md-7" id="banner-col2">
-						<img src="images/tests9.webp" class="img-responsive rounded mx-auto d-block">
+						
 					</div>
 				</div>
 			</div>
@@ -226,7 +230,7 @@ Artificial Intelligence (AI) chatbots are software programs that can simulate hu
 			<div class="container-fluid" id="solution-container">
 				<div class="row" id="banner-row">
 					<div class="col-md-6" id="solution-col">
-						<img src="images/hearing.png" class="img-responsive rounded mx-auto d-block" id="immss">
+						<img src="images/hearing.JPEG" class="img-responsive rounded mx-auto d-block" id="immss">
 					</div>
 					<div class="col-md-6" id="solution-col2">
 						<h1 class="text-center" style="font-size: 26px;">Proposed Solution</h1>
@@ -238,9 +242,13 @@ Artificial Intelligence (AI) chatbots are software programs that can simulate hu
 					</div>
 				</div>
 			</div>
+<center>
+<h>Research paper was accepted by ICIOT and ICAT</h>
+</center>
+<hr>
 					<div class="container-fluid" id="solution-container2">
 						<h1 class="text-center" style="font-size: 26px;">Product Demonstration - Solution</h1><br/>
-						<iframe width="70%" height="80%" src="https://www.youtube.com/embed/tgbNymZ7vqY?playlist=tgbNymZ7vqY&loop=1">
+						<iframe width="70%" height="80%" src="https://www.youtube.com/embed/watch?v=rxP9KIFW-cs&feature=youtu.be&ab_channel=HirushaDhanupriya">
 						</iframe>
 					</div>
 				
