--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@ Artificial Intelligence (AI) chatbots are software programs that can simulate hu
 				<section id="Objectives">
 					<h1 class="text-center">RESEARCH OBJECTIVES</h1>
 					<div class="container-fluid" id="object-container">
-						<h1 class="text-center" id="hedertw">"Auditory Avatar for Disables." an online service system for 
-							deaf people while creating a video avatar.
+						<h1 class="text-center" id="hedertw">Smart wearable device to track the health of elders where it is a service to provide helping hand to elders
 							</h1>
 						<div class="row" id="banner-row">
 							<div class="col-md-3" id="object-col1">
@@ -871,8 +870,8 @@ Artificial Intelligence (AI) chatbots are software programs that can simulate hu
 						</div>
 						<div class="col-md-4" id="footer-col2">
 							<h3>Contact Us</h3>
-							<p>Call Us: +94 071 1223 456</p>
-							<p>Email Us: heal99@gmail.com</p>
+							<p>Call Us: +94 070 313 1244</p>
+							<p>Email Us:  healceylon2022@gmail.com</p>
 						</div>
 						<div class="col-md-4" id="footer-col2">
 							<h3>Subscribe to Newsletter</h3>
